Solved the SonarQube quality warnings and failures